src/objects/NVMStatsSF__NVM_Agent_State_Detail__c.object
<CustomObject>
    <fields>
        <fullName>NVMStatsSF__AgentId__c</fullName>
        <label>AgentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Call_Key__c</fullName>
        <description>A key to use to match the call when calculating Handling time.  Until Call GUID passed, we will use a combination of start time, end time and agent ID.  Make this an external ID for indexing.  NB rows with this key may not be unique if data loads overlap so we don&apos;t enforce that.  Not all calls are included in handle time calculations - some may not have any - so field is not mandatory</description>
        <externalId>true</externalId>
        <label>Call Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Explanation__c</fullName>
        <label>Explanation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__MinorState__c</fullName>
        <label>MinorState</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__isWrapAndComplete__c</fullName>
        <description>True for rows which can be included in Agent Handle Time calculations, e.g. because the agent is in a wrap state or in a completed state.</description>
        <formula>OR(NVMStatsSF__State__c == &quot;0&quot;, CONTAINS(NVMStatsSF__State__c, &quot;Wrap Up&quot;))</formula>
        <inlineHelpText>Edit the formula to include state names for wrap or after call work and call completed states</inlineHelpText>
        <label>isWrapAndComplete</label>
        <type>Checkbox</type>
    </fields>
    <label>NVM Agent State Detail</label>
    <nameField>
        <displayFormat>ASD-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NVM Agent State Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>